--- a/src/ZectranetBundle/Resources/views/task.html.twig
+++ b/src/ZectranetBundle/Resources/views/task.html.twig
@@ -447,7 +447,7 @@
                             <a ng-init="Href = userHref(post.user.id)" ng-href="[[Href]]" style="display: inline-block; text-decoration: none;">
                                 <img style="width: 50px;height: 50px; object-fit: cover;" ng-src="[[avatar]]" alt="User Avatar" class="img-circle"/>
                             </a>
-                            <span style="vertical-align: top;font-weight: bold;">
+                            <span style="vertical-align: top;font-weight: 300;  color: #A9A9A9;">
                                 <strong style="vertical-align: top;color: #337ab7;">[[post.user.name]]
                                 </strong>
                                 added a comment - [[ post.posted ]]
