--- a/src/ZectranetBundle/Resources/views/task.html.twig
+++ b/src/ZectranetBundle/Resources/views/task.html.twig
@@ -394,6 +394,54 @@
                 </div>
             </div>
             <!-- End of Desciption Section -->
+
+            <!-- Begin of Sub-Task Section -->
+            {% if task.parentid == null %}
+            <div class="row" style="  margin-bottom: 50px;">
+                <div class="col-md-12">
+                    <div class="page-header" style="border: 0;">
+                        <h4 style="  color: #337ab7;margin-bottom: 0;"> Sub-Tasks </h4>
+                    </div>
+
+                           <table>
+                               <tbody>
+                            {% for i,subtask in task.subtasks %}
+                                  <tr>
+                                      <td >
+                                          {{ i + 1 }}.
+                                      </td>
+
+                                      <td class="col-xs-6">
+                                          <a style="word-wrap: break-word;" href="{{ path('zectranet_task_show', {'task_id': subtask.id }) }}"  >{{ subtask.name }}</a>
+                                      </td>
+
+                                      <td class="col-xs-2">
+                                          {% if subtask.status.label == 'story'  %}
+                                              <span style="color: {{  subtask.status.color }} ">{{ subtask.status.label }}</span>
+                                          {% elseif subtask.status.label == 'todo' %}
+                                              <span style="color:{{  subtask.status.color }} ">{{ subtask.status.label }}</span>
+                                          {% elseif subtask.status.label == 'in-progress' %}
+                                              <span style="color: {{  subtask.status.color }} ">{{ subtask.status.label }}</span>
+                                          {% elseif subtask.status.label == 'done' %}
+                                              <span style="color: {{  subtask.status.color }} ">{{ subtask.status.label }}</span>
+                                          {% endif %}
+                                      </td>
+
+                                      <td class="col-xs-4">
+                                          {% if subtask.assigned == null  %}
+                                              Not Assigned
+                                          {% else %}
+                                              {{ subtask.assigned.name ~ ' ' ~ subtask.assigned.surname ~ ' (' ~ subtask.assigned.username ~ ')' }}
+                                          {% endif %}
+                                      </td>
+                                  </tr>
+                            {% endfor %}
+                               </tbody>
+                           </table>
+                </div>
+            </div>
+            {% endif %}
+            <!-- End of Sub-Task Section -->
         </div>
 
         <!-- Begin of Task Nav Tabs -->
@@ -404,16 +452,17 @@
                     Logs
                 </a>
             </li>
-            <li class="" role="presentation" ng-click="ScrollComments()">
+            <li class="" role="presentation" >
                 <a id="coments-tab" aria-controls="coments" data-toggle="tab" role="tab" href="#coments" aria-expanded="false">Comments</a>
             </li>
+
         </ul>
         <!-- End of Task Nav Tabs -->
 
-        <div id="tasks-tab-content" class="tab-content">
-            <div id="task-logs" class="tab-pane fade in active" style="max-height: 500px; overflow-y: auto;" aria-labelledby="task-logs-tab" role="tabpanel">
-                <table class="table">
-                    <thead>
+            <div id="tasks-tab-content" class="tab-content">
+                <div id="task-logs" class="tab-pane fade in active" style="max-height: 500px; overflow-y: auto;" aria-labelledby="task-logs-tab" role="tabpanel">
+                    <table class="table">
+                        <thead>
                         <tr>
                             <th class="col-md-1">#</th>
                             <th class="col-md-2">User</th>
@@ -422,8 +471,8 @@
                             <th class="col-md-3">Value After</th>
                             <th class="col-md-2">Date</th>
                         </tr>
-                    </thead>
-                    <tbody>
+                        </thead>
+                        <tbody>
                         {% for i, log in task.logs %}
                             <tr>
                                 <td>{{ i + 1 }}</td>
@@ -437,51 +486,52 @@
                                 </td>
                             </tr>
                         {% endfor %}
-                    </tbody>
-                </table>
-            </div>
-            <div id="coments"  class="tab-pane fade" aria-labelledby="coments-tab" role="tabpanel"  ng-init="getPosts(0, 100)">
-                <div style="overflow-y: auto;height: 500px; " id="posts-panel">
-                <div class="coments" ng-repeat="post in posts">
-                        <p style="margin-top: 25px;" ng-init="avatar = generateAsset(urlAsset, 'documents/' + post.user.avatar)">
-                            <a ng-init="Href = userHref(post.user.id)" ng-href="[[Href]]" style="display: inline-block; text-decoration: none;">
-                                <img style="width: 50px;height: 50px; object-fit: cover;" ng-src="[[avatar]]" alt="User Avatar" class="img-circle"/>
-                            </a>
-                            <span style="vertical-align: top;font-weight: 300;  color: #A9A9A9;">
-                                <strong style="vertical-align: top;color: #337ab7;">[[post.user.name]]
-                                </strong>
-                                added a comment - [[ post.posted ]]
-                            </span>
-
-                        </p>
-                        <p style="margin: -10px 0 0 83px;" ng-bind-html="post.message"></p>
-                        <hr>
+                        </tbody>
+                    </table>
                 </div>
-                </div>
+                <div id="coments"  class="tab-pane fade" aria-labelledby="coments-tab" role="tabpanel"  ng-init="getPosts(0, 100)">
+                    <div style="overflow-y: auto;height: 500px; " id="posts-panel">
+                        <div class="coments" ng-repeat="post in posts">
+                            <p style="margin-top: 25px;" ng-init="avatar = generateAsset(urlAsset, 'documents/' + post.user.avatar)">
+                                <a ng-init="Href = userHref(post.user.id)" ng-href="[[Href]]" style="display: inline-block; text-decoration: none;">
+                                    <img style="width: 50px;height: 50px; object-fit: cover;" ng-src="[[avatar]]" alt="User Avatar" class="img-circle"/>
+                                </a>
+                                    <span style="vertical-align: top;font-weight: 300;  color: #A9A9A9;">
+                                        <strong style="vertical-align: top;color: #337ab7;">[[post.user.name]]
+                                        </strong>
+                                        added a comment - [[ post.posted ]]
+                                    </span>
 
-                <div class="list-group-item">
-                    <form class="input-group input-group-lg">
-                        <span class="input-group-btn">
-                            <button class="btn btn-default" type="button" style="height: 65px;" data-placement="top" id="add_dialog_btn"  data-toggle="modal" data-target="#add_dialog">
-                                <i class="fa fa-file"></i>
-                            </button>
-                        </span>
-                                <textarea id="textarea-post" name="message" class="form-control" rows="3" style="font-size: 11px; height: 65px;" ng-keypress="pressEnter($event)" ng-model="message"></textarea>
-                                <span class="input-group-btn">
-                                <button class="btn btn-primary" name="subscribe" type="button" style="height: 65px; font-size:15px;" ng-click="SendPost(message)">
-                                    <span>Post</span>
+                            </p>
+                            <p style="margin: -10px 0 0 83px;" ng-bind-html="post.message"></p>
+                            <hr>
+                        </div>
+                    </div>
+
+                    <div class="list-group-item">
+                        <form class="input-group input-group-lg">
+                            <span class="input-group-btn">
+                                <button class="btn btn-default" type="button" style="height: 65px;" data-placement="top" id="add_dialog_btn"  data-toggle="modal" data-target="#add_dialog">
+                                    <i class="fa fa-file"></i>
                                 </button>
-                        </span>
-                    </form>
-                    <div id="slide-down-menu-screenshots" cg-busy="documentPromise" style="display: none;">
-                        <div id="div-screenshot" style="display: none; width: auto;height: auto;">
+                            </span>
+                            <textarea id="textarea-post" name="message" class="form-control" rows="3" style="font-size: 11px; height: 65px;" ng-keypress="pressEnter($event)" ng-model="message"></textarea>
+                                    <span class="input-group-btn">
+                                    <button class="btn btn-primary" name="subscribe" type="button" style="height: 65px; font-size:15px;" ng-click="SendPost(message)">
+                                        <span>Post</span>
+                                    </button>
+                            </span>
+                        </form>
+                        <div id="slide-down-menu-screenshots" cg-busy="documentPromise" style="display: none;">
+                            <div id="div-screenshot" style="display: none; width: auto;height: auto;">
 
+                            </div>
                         </div>
                     </div>
                 </div>
+
+
             </div>
-            {% include '@Zectranet/dialogAdd.html.twig' %}
-        </div>
         </div>
 
     </div>
