--- a/src/ZectranetBundle/Resources/views/userProfile.html.twig
+++ b/src/ZectranetBundle/Resources/views/userProfile.html.twig
@@ -3,84 +3,51 @@
 {% block title %}{{ user.username }} Profile{% endblock %}
 
 {% block body %}
-    <div class="page-header">
-        <i class="fa fa-user fa-2x"></i>
-        <span style="font-size: 25px;"> User </span>
-    </div>
-
     <div class="row">
-        <div class="col-md-12">
-            <div class="list-group col-md-2">
-                <img class="img-rounded center-block" src="{{ asset('') }}documents/{{ user.avatar }}" style="width: auto; max-width: 100%; max-height: 100%;">
+        <div class="col-xs-12">
+            <div class="page-header">
+                <h3><i class="fa fa-user fa-2x"></i> My Profile</h3>
+            </div>
+
+            <div class="col-md-2">
+                <div class="row">
+                    <div class="col-xs-12">
+                        <img class="img-responsive" src="{{ asset('') }}documents/{{ user.avatar }}" style="width: auto; max-width: 100%; max-height: 100%;">
+                    </div>
+                </div>
+                <div class="row" style="margin-top: 10px;">
+                    <div class="col-xs-12">
+                        <button class="center-block btn btn-default btn-success" type="button">
+                            Send Message
+                        </button>
+                    </div>
+                </div>
             </div>
 
             <div class="col-md-10">
-                <div class="row">
-                    <div class="col-md-6 list-group">
-                        <div class="list-group-item active">
-                            Name:
-                        </div>
-                        <div class="list-group-item" style="margin-bottom: 5px;">
-                            {{ user.name }}
-                        </div>
-                    </div>
-
-                    <div class="col-md-6 list-group">
-                        <div class="list-group-item active">
-                            Surname:
-                        </div>
-                        <div class="list-group-item">
-                            {{ user.surname }}
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-6 list-group">
-                        <div class="list-group-item active">
-                            Login:
-                        </div>
-                        <div class="list-group-item">
-                            {{ user.username }}
-                        </div>
-                    </div>
-
-                    <div class="col-md-6 list-group">
-                        <div class="list-group-item active">
-                            Country:
-                        </div>
-                        <div class="list-group-item">
-                            <div class="text-info text-center">Under construction</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
+                <p><strong>Name: </strong> {{ user.name }}</p>
+                <p><strong>Surname: </strong> {{ user.surname }}</p>
+                <p><strong>Username: </strong> {{ user.username }}</p>
+                <hr>
+                <p><strong>Country: </strong> Under Construction</p>
+                <p><strong>City: </strong> Under Construction</p>
+                <hr>
+                <p><strong>About Me: </strong>Under Construction</p>
+                <hr>
+                <p><strong>Work Experience: </strong>
+                    <span class="label label-info">
+                        Under Construction
+                    </span>
+                </p>
+                <hr>
+                <p><strong>Study: </strong>Under Construction</p>
         </div>
     </div>
 
-    <div class="list-group col-md-6">
-        <div class="list-group-item active">
-            <span class="text-center">About Me:</span>
-        </div>
-        <div class="list-group-item">
-            <div class="text-info text-center">Under construction</div>
-        </div>
-    </div>
-
-    <div class="list-group col-md-6">
-        <div class="list-group-item active">
-            <span class="text-center">Work Experience:</span>
-        </div>
-        <div class="list-group-item">
-            <div class="text-info text-center">Under construction</div>
-        </div>
-    </div>
-
-    <div class="list-group col-md-12">
-        <div class="list-group-item active">
-            <div class="text-center">Daily TimeSheet</div>
-        </div>
-        <div class="list-group-item">
+    <div class="row" style="margin-bottom: 20px;">
+        <div class="col-xs-12">
+            <hr>
+            <p align="center"><strong>Daily TimeSheet:</strong></p>
             {% if user.wde | length == 0 %}
                 <h4 class="text-center text-info">WDE will be displayed here</h4>
             {% else %}
@@ -129,7 +96,6 @@
                     </tbody>
                 </table>
             {% endif %}
-
         </div>
     </div>
 {% endblock %}
