--- a/web/bundles/zectranet/css/mainv_001.css
+++ b/web/bundles/zectranet/css/mainv_001.css
@@ -60,3 +60,28 @@
   opacity: 0;
   padding: 0 10px;
 }
+
+.private-office h4{
+  font-family: 'PT Sans Narrow', sans-serif;
+  font-weight: bold;
+  margin:7px;
+}
+
+.private-office h3{
+  font-family: 'PT Sans Narrow', sans-serif;
+  font-weight: bold;
+  margin:7px;
+}
+
+.private-office-btn{
+  background: #428bca;
+  color: white;
+  text-decoration: none;
+}
+.private-office-btn:hover{
+  background: #337ab7;
+  text-decoration: none !important;
+}
+.private-office-btn-a:hover{
+  text-decoration: none !important;
+}
