attachments in coments on the task page

--- a/src/ZectranetBundle/Resources/views/task.html.twig
+++ b/src/ZectranetBundle/Resources/views/task.html.twig
@@ -527,7 +527,7 @@
                         </div>
                     </div>
                 </div>
-
+                {% include '@Zectranet/dialogAdd.html.twig' %}
 
             </div>
         </div>
