delete screenshots when you will added him

--- a/src/ZectranetBundle/Resources/views/index.html.twig
+++ b/src/ZectranetBundle/Resources/views/index.html.twig
@@ -266,6 +266,7 @@
 	<script>
 		// Variable for AngularJS
 		TEMPPARAMS.USER_ID = {{ app.user.id }};
+		JSON_URLS.deleteScrenshots  = "{{ path('zectranet_document_delete', { fileid : 0 }) }}";
 	</script>
 {% endblock %}
 
