--- a/web/bundles/zectranet/css/style.css
+++ b/web/bundles/zectranet/css/style.css
@@ -361,3 +361,39 @@
 .visible-element {
     display: inherit !important;
 }
+
+.close-screenshot{
+    position: absolute;
+    left: 0px;
+    top: -30px;
+    font-size: 215px;
+    opacity: 0;
+}
+
+.close-screenshot:hover{
+    position: absolute;
+    left: 0;
+    top: -30px;
+    font-size: 215px;
+    opacity: 0.5;
+    color: #d9534f;
+
+}
+
+.close-img{
+    position: absolute;
+    left: 0px;
+    top: -30px;
+    font-size: 215px;
+    opacity: 0;
+}
+
+.close-img:hover{
+    position: absolute;
+    left: 0;
+    top: -30px;
+    font-size: 215px;
+    opacity: 0.5;
+    color: #d9534f;
+
+}
